codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__remote_image_generation_uses_local_file_link.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Generated Image:
  └ A tiny blue square
  └ Saved to: file://$CODEX_HOME/generated_images/$THREAD/generated.png
▀
