codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resumed_server_queue.snap
---
source: tui/src/chatwidget/tests/server_queue_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
• Queued follow-up inputs
  ↳ saved while the TUI was closed
    ↑ edit last queued message

› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
